# vargos

./: .env.example  .env.test  .gitignore  .gitmodules  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  KNOWN_ISSUES.md  LICENSE  LICENSE.md  README.md  SECURITY.md  TESTING.md  USER.md  boot-order.ts  boot.ts  cli.ts  eslint.config.mjs  index.ts  memory.db  memory.db-shm  memory.db-wal  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-cli.sh  tsconfig.json  turbo.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  setup-ruleset.sh
.husky/: commit-msg  pre-commit  pre-push
.migrations/: README.md
apps/cli/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LANGUAGE_COMPARISON.md  README.md  REQUIREMENTS.md  eslint.config.mjs  package.json  tsconfig.json
apps/cli/src/: cli.rs  main.rs
apps/cli/src/agent/: client.rs  discovery.rs  mod.rs  session.rs  stream.rs
apps/cli/src/commands/: executor.rs  history.rs  mod.rs  parser.rs  repl.rs
apps/cli/src/config/: manager.rs  mod.rs  types.rs
apps/cli/src/state/: mod.rs  store.rs
apps/cli/src/ui/: hint_panel.rs  input_panel.rs  layout.rs  mod.rs  output_panel.rs  renderer.rs
apps/cli/src/utils/: errors.rs  mod.rs
cli/: channels.ts  onboard.ts
config/: index.ts  schemas.ts
docs/: AGENT_ARCHITECTURE.md  CHANNELS_ARCHITECTURE_FINAL_APPROVED.md  CHANNELS_FINAL_ARCHITECTURE.md  REFACTOR_CONSOLIDATED.md  ROADMAP.md  USAGE.md  agent-q2-vs-v2-analysis.md  api-reference.md  architecture.md  cli.md  (+23 more)
(+1065 files in other folders)
