[package]
name = "vargos-cli"
version = "0.1.0"
edition = "2021"
authors = ["Vargos Team"]
description = "Vargos CLI - Interactive terminal interface for Mastra agents"
license = "SEE LICENSE IN LICENSE.md"

[dependencies]
# Terminal UI
ratatui = "0.26"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
tokio-stream = "0.1"

# HTTP client & SSE
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Markdown rendering
pulldown-cmark = "0.9"
syntect = "5.0"

# Utilities
anyhow = "1.0"
dirs = "6.0"
log = "0.4"
simplelog = "0.12"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
atty = "0.2"

# Text processing
unicode-width = "0.2"
textwrap = "0.16"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

